--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://username.github.io/repository-name/",
+  "homepage": "https://kimpra2989.github.io/spline/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
