--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,12 @@ jobs:
       - name: Build project
         run: yarn build
 
+      - name: List build directory
+        run: ls -al dist
+        
       # 5. 빌드된 정적 파일을 gh-pages 브랜치에 배포
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: dist
