--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,19 +24,11 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      # 4. 프로젝트 빌드
+      # 4. 프로젝트 빌드 및 빌드 파일 확인
       - name: Build project
         run: yarn build
 
-      # 5. Git 설정 추가
-      - name: Setup Git
-        run: |
-          git config --global user.name 'kimpra'
-          git config --global user.email 'dustmqaksdltkfrlfdldi@gmail.com'
-          git init
-          git remote add origin https://github.com/KimPra2989/spline.git
-
-      # 6. 빌드된 정적 파일을 gh-pages 브랜치에 배포
+      # 5. 빌드된 정적 파일을 gh-pages 브랜치에 배포
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
