--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,5 +34,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          exclude_assets: ".*"
-          force_orphan: true
+          force_orphan: false
